[T] update postamble.html for footer.

--- a/postamble.html
+++ b/postamble.html
@@ -29,10 +29,7 @@
 </section>
 
 <footer>
-    |采用<a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0</a>授权|
-    |由<a href="http://orgmode.org">Org Mode</a>自动生
-    成<input type="button" value="Show Org source"
-    onClick='show_org_source()'>|部署在<a href="https://github.com/lotabout/orgwiki">Github Pages</a>|
+    |采用<a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0</a>授权|由<a href="http://orgmode.org">Org Mode</a>自动生成<input type="button" value="Show Org source" onClick='show_org_source()'>|部署在<a href="https://github.com/lotabout/orgwiki">Github Pages</a>|
 </footer>
 
     <script src="assets/js/jquery-1.7.1.min.js"></script>
